<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardCornerRadius="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Col2"
        android:weightSum="9"
        android:fitsSystemWindows="true"
        tools:context=".UI.MainActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacion"
            android:textColor="@color/AuxWhite"
            android:textSize="16sp"
            android:padding="16dp"
            android:background="@color/Col1"
            android:layout_marginBottom="8dp"
            />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >



                <androidx.cardview.widget.CardView
                    android:id="@+id/Lugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="5dp"

                    >
                    <TextView
                        android:id="@+id/EditLocate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lugar"
                        android:layout_margin="8dp"
                        />

                </androidx.cardview.widget.CardView>




                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="5dp"
                    >
                    <TextView
                        android:id="@+id/EditReferences"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/referencias"
                        android:layout_margin="8dp"

                        />



                </androidx.cardview.widget.CardView>




                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="5dp"
                    >


                    <TextView
                        android:id="@+id/EditWhoReported"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quien_reporta"
                        android:layout_margin="8dp"
                        />



                </androidx.cardview.widget.CardView>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginBottom="8dp"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:id="@+id/SpinnerImportance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/importancia"
                            android:textColor="@color/AuxWhite"
                            android:gravity="left"
                            android:textSize="12sp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="4dp"
                            tools:ignore="NestedWeights,RtlHardcoded" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:id="@+id/SpinnerOrigin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/origen"
                            android:textColor="@color/AuxWhite"
                            android:gravity="left"
                            android:textSize="12sp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="4dp"
                            tools:ignore="NestedWeights,RtlHardcoded" />


                    </LinearLayout>




                </LinearLayout>

                <TextView
                    android:id="@+id/SpinnerStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/status"
                    android:textColor="@color/AuxWhite"

                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="0dp"
                    >

                    <TextView
                        android:id="@+id/EditResponsible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quien_reporta"
                        android:layout_margin="8dp"
                        />


                </androidx.cardview.widget.CardView>





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:background="@color/Hint"
                    >


                    <Button
                        android:id="@+id/BtnSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:backgroundTint="@color/Col1"
                        android:text="@string/aceptar"
                        android:textColor="@color/AuxWhite"
                        android:layout_marginRight="16dp"


                        />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>








    </LinearLayout>
</androidx.cardview.widget.CardView>