<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardCornerRadius="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Col2"
        android:weightSum="9"
        android:fitsSystemWindows="true"
        tools:context=".UI.MainActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/AuxWhite"
            android:textSize="16sp"
            android:padding="16dp"
            android:background="@color/Col1"
            android:layout_marginBottom="8dp"
            />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >






                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:cardCornerRadius="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Col4"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    >

                    <Spinner
                        android:id="@+id/SpinnerStatus"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:spinnerMode="dropdown"
                        android:gravity="center_vertical"
                        android:ems="10"

                        />


                </androidx.cardview.widget.CardView>






                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:background="@color/Hint"
                    >

                    <Button
                        android:id="@+id/BtnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelar"
                        android:backgroundTint="@color/AuxWhite"
                        android:textColor="@color/Col1"
                        android:layout_marginRight="16dp"
                        tools:ignore="NestedWeights" />

                    <Button
                        android:id="@+id/BtnSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:backgroundTint="@color/Col1"
                        android:text="@string/guardar"
                        android:textColor="@color/AuxWhite"
                        android:layout_marginRight="16dp"


                        />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>








    </LinearLayout>
</androidx.cardview.widget.CardView>