<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardCornerRadius="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Col2"
        android:weightSum="9"
        android:fitsSystemWindows="true"
        tools:context=".UI.MainActivity">
        <LinearLayout
            android:id="@+id/btnMasInformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/Col1"
            android:layout_marginBottom="8dp"

            >

            <TextView
                android:id="@+id/LocalidadDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"

                android:gravity="left"
                android:textColor="@color/AuxWhite"
                android:text="Editar"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/ImgBorrar"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/eliminar"

                />


        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >



                <androidx.cardview.widget.CardView
                    android:id="@+id/Lugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="5dp"

                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lugar"
                        android:textColorHint="@color/AuxWhite"
                       >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EditLocate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textSize="14sp"
                            android:inputType="text"
                            android:background="@color/Col1"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="5dp"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/referencias"
                        android:textColorHint="@color/AuxWhite"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EditReferences"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"

                            android:background="@color/Col1"
                            android:textSize="14sp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>




                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="5dp"
                    >



                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/quien_reporta"
                        android:textColorHint="@color/AuxWhite"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EditWhoReported"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:background="@color/Col1"
                            android:textSize="14sp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginBottom="8dp"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/importancia"
                            android:textColor="@color/AuxWhite"
                            android:gravity="left"
                            android:textSize="12sp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="4dp"
                            tools:ignore="NestedWeights,RtlHardcoded" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            app:cardCornerRadius="6dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:backgroundTint="@color/Col5"
                            android:layout_gravity="center"
                            app:cardElevation="5dp"
                            >

                            <Spinner
                                android:id="@+id/SpinnerImportance"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:spinnerMode="dropdown"
                                android:gravity="center_vertical"
                                android:ems="10"

                                />



                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/origen"
                            android:textColor="@color/AuxWhite"
                            android:gravity="left"
                            android:textSize="12sp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="4dp"
                            tools:ignore="NestedWeights,RtlHardcoded" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            app:cardCornerRadius="6dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:backgroundTint="@color/Col5"
                            android:layout_gravity="center"
                            app:cardElevation="5dp"
                            >

                            <Spinner
                                android:id="@+id/SpinnerOrigin"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:spinnerMode="dropdown"
                                android:gravity="center_vertical"
                                android:ems="10"

                                />


                        </androidx.cardview.widget.CardView>
                    </LinearLayout>




                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/status"
                    android:textColor="@color/AuxWhite"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:cardCornerRadius="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Col4"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    >

                    <Spinner
                        android:id="@+id/SpinnerStatus"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:spinnerMode="dropdown"
                        android:gravity="center_vertical"
                        android:ems="10"

                        />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="0dp"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/responsable"
                        android:textColorHint="@color/AuxWhite"

                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EditResponsible"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"

                            android:background="@color/Col1"
                            android:textSize="14sp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:background="@color/Hint"
                    >

                    <Button
                        android:id="@+id/BtnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelar"
                        android:backgroundTint="@color/AuxWhite"
                        android:textColor="@color/Col1"
                        android:layout_marginRight="16dp"
                        tools:ignore="NestedWeights" />

                    <Button
                        android:id="@+id/BtnSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:backgroundTint="@color/Col1"
                        android:text="@string/guardar"
                        android:textColor="@color/AuxWhite"
                        android:layout_marginRight="16dp"


                        />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>








    </LinearLayout>
</androidx.cardview.widget.CardView>